# src/transaction/db/persist-transaction/types.ts
@@ -1,15 +1,24 @@
 import { TransactionStandardDTO } from '@transaction/schema';
 
-export type TransactionStandardCreateProps = TransactionStandardDTO & {
+export type TransactionStandardCreateProps = Omit<TransactionStandardDTO, 'kind'> & {
+  kind: 'standard';
   ownerId: string;
   sourceIndex: number;
 };
 
-export type TransactionTransferCreateProps = TransactionStandardCreateProps & {
+export type TransactionTransferCreateProps = Omit<
+  TransactionStandardCreateProps,
+  'kind'
+> & {
+  kind: 'transfer';
   sourceRefIndex: number;
 };
 
-export type TransactionExchangeCreateProps = TransactionTransferCreateProps & {
+export type TransactionExchangeCreateProps = Omit<
+  TransactionTransferCreateProps,
+  'kind'
+> & {
+  kind: 'exchange';
   currencies: string;
   exchangeRate: number;
 };
